--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
@@ -28,6 +28,9 @@
   <!-- font-awesome icons -->
   <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.min.css">
 
+  <!-- Handle bar for templating purpose -->
+  <script src="/static/ndf/bower_components/handlebars/handlebars.min.js"></script>
+
   <!-- Modernizr - Browser detection JS http://modernizr.com/ -->
   <script src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
 
