--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -9,7 +9,7 @@
     .app.button-bar {
         height: 45px;
     }
-    
+
     //This is the main content container between the header and footer
     background: url("watermark.png") no-repeat 0 80%;
   min-height: 100%;
@@ -17,7 +17,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-            
+
     &:after{
         //Hack for setting div height to the height of the browser window
     content:"";
@@ -284,3 +284,100 @@
 
 }
 
+.login-page {
+    position: relative;
+    background: url(/static/ndf/images/login-background.png);
+    background-size: 100% 100%;
+    height: 100%;
+
+    .login-page-opacity {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        opacity: 0.6;
+        background: -webkit-gradient(linear, left top, right top, from(#E9A900), to(#B0108D));
+        background: -webkit-linear-gradient(left, #E9A900, #B0108D);
+        background: -moz-linear-gradient(left, #E9A900, #B0108D);
+        background: -ms-linear-gradient(left, #E9A900, #B0108D);
+        background: -o-linear-gradient(left, #E9A900, #B0108D);
+    }
+
+    .login-page-form {
+        background-color: #fff;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        border-radius: 10px;
+        padding: 10px 40px;
+        opacity: 0.95;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+
+        .login-page-header {
+            img {
+                height: 80px;
+                width: 280px;
+            }
+            span {
+                display: block;
+                text-transform: uppercase;
+                color: #d5d5d5;
+                font-weight: 600;
+                letter-spacing: 1px;
+            }
+        }
+        .login-captcha {
+          margin: 10px 0;
+
+          >div {
+            display: inline-block;
+            vertical-align: top;
+          }
+          .fi-refresh {
+            color: #A0148E;
+            font-size: 25px;
+          }
+          #captcha-content {
+              th{
+                display: none;
+              }
+              td>input {
+                display: inline-block;
+
+                &#id_captcha_1 {
+                  width: 130px;
+                }
+              }
+          }
+        }
+        .login-button {
+            .button {
+              font-size: 15px;
+              background-color: #B1B1B1;
+              font-weight: 600;
+              border-bottom: 3.5px solid #DADADA;
+              border-radius: 5px;
+              padding: 9px;
+
+              &:hover {
+                background-color: #CC1AB5;
+                border-color: #881378;
+              }
+            }
+        }
+        .forgot-password {
+          label {
+            font-size: 10px;
+            text-align: center;
+            text-decoration: underline;
+          }
+        }
+        .register-user {
+          label {
+            font-size: 10px;
+            margin: 10px 0px 0px;
+          }
+          span {
+            color: #A0148E;
+          }
+        }
+    }
+}
