Updated header text for select-help topics in node edit

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -593,7 +593,7 @@
 
     <div class="content contents" id="panel-help" style="width:95%; display:none;" >      
       	<div class="row">
-		  	<h7>{% trans "Select help page for this resource"%} </h7>
+		  	<h7>{% trans "Select help page(s) for this resource from following options:"%} </h7>
 		</div>
 	    <div class="help-settings-div">
 			{% get_dict_from_list_of_dicts node.relation_set True as node_rel_set %}
