--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -54,15 +54,6 @@
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_res_unit">{% trans " Edit Content" %}</a>|
                           <a title="Edit this {{node.member_of_names_list.0}}" class="edit_settings" href="{% url edit_url group_id node.pk %}">{% trans " Edit Settings" %}</a>
 
-                          {% get_relation_value node.pk 'has_help' as grel_dict %}
-                            {% if grel_dict.cursor and grel_dict.grel_node.count %}
-                                |<a class="lbl_field tag-rating-div" data-dropdown="help-list" data-options="is_hover:true;align:bottom"><i class="fi-info"></i> {% trans "Help" %}</a>
-                                <ul id="help-list" class="f-dropdown" data-dropdown-content>
-                                {% for each_help_page in grel_dict.grel_node %}
-                                  <li><a href="{% url 'page_details' groupid each_help_page.pk %}" target="_blank" title='{% trans "Click to view help page" %}'>{{each_help_page.name}}</a></li>
-                                {% endfor %}
-                                </ul>
-                            {% endif %}
                       </small>
                   {% endif %}
                   {% endif %}
@@ -103,26 +94,35 @@
           </div>
       </div>
       <div class="activity-slides-container row" style=" height:750px;">
+          {% get_relation_value node.pk 'has_help' as grel_dict %}
           <div class="columns small-12 activity-slides">
               <div class="row activity-slide node_details" style="overflow-y:auto;">
-                  <a id="related-content-button" href="#related-content" class="view-related-content"><i class="fa fa-arrow-circle-down"></i>&nbsp;View related contents</a>
+                  {% if grel_dict.cursor and grel_dict.grel_node.count %}
+                    <a id="related-content-button" href="#related-content" class="view-related-content"><i class="fa fa-arrow-circle-down"></i>&nbsp;View related contents</a>
+                  {% endif %}
                   {# {{node.content|safe}} #}
                   {% include 'ndf/node_ajax_content.html' with no_discussion=True %}
               </div>
+              {% if grel_dict.cursor and grel_dict.grel_node.count %}
               <div id="related-content">
                 <i class="fa fa-info-circle"></i>
+                {% for each_help_page in grel_dict.grel_node %}
                 <div class="related-content-header">
                   <span>Related Help Topic</span>
-                  <span class="related-content-title">
-                    <i class="fa fa-caret-right"></i>&nbsp;Demo Heading
-                    <a href="#related-content-button" class="back-to-activity"><i class="fa fa-arrow-circle-up"></i>&nbsp;Go back to activity</a>
-                    <div class="related-content-close">&times;</div>
-                  </span>
-                </div>
-                <div class="related-content-body">
-                  This is the content
-                </div>
+                    <span class="related-content-title">
+                      <i class="fa fa-caret-right"></i>&nbsp;{{each_help_page.name}}
+                      <a href="#related-content-button" class="back-to-activity"><i class="fa fa-arrow-circle-up"></i>&nbsp;Go back to activity</a>
+                      <div class="related-content-close">&times;</div>
+                    </span>
+                  </div>
+                  <div class="related-content-body">
+                  {{each_help_page.content|safe}}
+                  </div>
+
+                {% endfor %}
               </div>
+              {% endif %}
+
           </div>
       </div>
       <div class="row activity-comments-section">
