node edit: enabled addition tags separated by commas in tags textbox

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -1519,7 +1519,16 @@
 		{% endif %}
 	    updateAllTags();
 
+	    if(checkTag())
+	    {
+	    	var tagsStr = tags.value.trim();
 
+	    	$("input:hidden[name='tags']").val($("input:hidden[name='tags']").val() + ', ' + tagsStr);
+	    }
+	    else
+	    {
+	    	event.preventDefault();
+	    }
 	});
 
 
