--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/login.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/registration/login.html
@@ -16,111 +16,100 @@
   }
 {% endblock %}
 
-{% block body_content %}
+{% block body_content %} 
 	{% url 'auth_password_reset' as auth_pwd_reset_url %}
 	{% url 'registration_register' as register_url %}
-	<div class="login-page">
-		<div class="login-page-opacity"></div>
-	    <div class="row" style="margin: 1.2rem 0;">
-	        <div class="small-8 medium-4 large-3 small-centered medium-centered large-centered columns login-page-form">
-	            <div class="row">
-	                <div class="small-12 medium-12 large-12 columns end text-center login-page-header">
-	                	<img src="/static/ndf/images/landing_pg_slides/clix-logo-i2c-site.svg">
-	                	<span>{% trans "LogIn" %}</span>
-	                </div>
-	            </div>
-				<br/>
-				{% if form.errors %}
-					<small class="small-10 medium-8 large-8 columns error all-error">{% trans "Either your email or password is incorrect !!!" %}</small>
+    
+    
+    <div class="row" style="margin: 1.2rem 0;">
+        <div class="small-8 medium-8 large-8 small-centered medium-centered large-centered columns">
+            <div class="row">
+                <div class="small-8 medium-8 large-8 columns end text-center">
+                <h2>{% trans "Log In" %}</h2>
+                </div>
+            </div>
+        </div>
+
+		<div class="small-12 medium-8 large-8 small-centered large-centered columns">
+			<br/>
+			{% if form.errors %}
+				<small class="small-10 medium-8 large-8 columns error all-error">{% trans "Either your email or password is incorrect !!!" %}</small>
+			{% endif %}
+
+			<form method="post" id="loginSubmit" action="{% url 'auth_login' %}" data-abide>
+				{% csrf_token %}
+
+				<!-- Email -->
+				<div class="row">
+					<div class="small-10 medium-8 large-8 columns end">
+						<label class="left">
+							Username or {{ form.username.label }}
+						</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="small-10 medium-8 large-8 columns end">
+						{{ form.username }}
+					</div>
+				</div>
+
+				<!-- Password -->
+				<div class="row">
+					<div class="small-10 medium-10 large-4 columns">
+						<label class="left">
+							{{ form.password.label_tag }}
+						</label>
+					</div>
+					
+				</div>
+				<div class="row">
+					<div class="small-10 medium-8 large-8 columns end">
+						{{ form.password }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="medium-4 large-4 small-text-left  medium-offset-6 large-offset-6 columns end">
+						<label>
+							<a title={% trans "Recover your password" %} href="{{ auth_pwd_reset_url }}">{% trans "Forgot your password?" %}</a>
+						</label>
+					</div>	
+				</div>
+				{% get_is_captcha_visible as is_captcha %}
+				{% if is_captcha %}
+				<div class = "captcha-feild">
+					{% include "ndf/Captcha.html" %}
+				</div>	
 				{% endif %}
+				<!-- Login button -->
+				<div class="row">
+					<div class="small-6 medium-6 large-2 small-offset-3 medium-offset-2 large-offset-3 columns end">
+						<input type="submit" class="button small expand" tabindex= "4" value="{% trans "Login" %}" style="font-size:15px" />
+					</div>
+				</div>
 
-				<form method="post" id="loginSubmit" action="{% url 'auth_login' %}" data-abide>
-					{% csrf_token %}
-
-					<!-- Email -->
+				<!-- Forgot password link & New Registration link -->
+      			{# {% if site.SITE_NAME != "NROER" %}  #}
 					<div class="row">
-						<div class="small-12 columns end">
-							<label class="left">
-								Username or {{ form.username.label }}
-							</label>
-						</div>
-					</div>
-					<div class="row">
-						<div class="small-12 columns end">
-							{{ form.username }}
-						</div>
-					</div>
-
-					<!-- Password -->
-					<div class="row">
-						<div class="small-12 columns">
-							<label class="left">
-								{{ form.password.label_tag }}
-							</label>
-						</div>
-
-					</div>
-					<div class="row">
-						<div class="small-12 columns end">
-							{{ form.password }}
-						</div>
-					</div>
-					{% get_is_captcha_visible as is_captcha %}
-					{#% if is_captcha %#}
-					<div class="row">
-						<div class="small-12 columns">
-							<div class="row">
-								<div class="small-12" style="font-size: 11px;">
-									Enter these alphabets in the box below
-								</div>
-							</div>
-							<div>
-								{% include "ndf/Captcha.html" %}
-							</div>
-						</div>
-					</div>
-					{#% endif %#}
-
-					<div class="row">
-						<div class="small-12 medium-12 large-12 text-center columns end login-button">
-							<input type="submit" class="button small expand" tabindex= "4" value="{% trans "Login" %}" style="font-size:15px" />
-						</div>
-					</div>
-					<div class="row">
-						<div class="medium-12 large-12 small-text-left text-center columns end forgot-password">
+						<div class="small-6 medium-6 large-6 small-offset-3 large-offset-1 columns end">
+							<center>
 							<label>
-								<a title={% trans "Recover your password" %} href="{{ auth_pwd_reset_url }}">{% trans "Forgot your password?" %}</a>
+							<a title={% trans "Click here to register" %} href="{{ register_url }}">
+								{% trans "Don't have an account? Register yourself now." %}
+							</a>
 							</label>
+							{% if site.SITE_NAME == "NROER" %}
+							<br/>
+							<a href="mailto:nroer.support@gnowledge.org">
+								Can't register? Contact us for help.
+							</a>  
+							{% endif %}
+							</center>
 						</div>
 					</div>
-					<!-- Login button -->
+				{# {% endif %} #}
+				<input type="hidden" name="next" value="{{ next }}" />
+			</form>
 
-					<!-- Forgot password link & New Registration link -->
-	      			{# {% if site.SITE_NAME != "NROER" %}  #}
-						<div class="row">
-							<div class="small-12 medium-12 large-12 text-ceter columns end register-user">
-								<center>
-								<label>
-								<a title={% trans "Click here to register" %} href="{{ register_url }}">
-									{% trans "Don't have an account?" %}
-									<span>
-										Register
-									</span>
-								</a>
-								</label>
-								{% if site.SITE_NAME == "NROER" %}
-								<br/>
-								<a href="mailto:nroer.support@gnowledge.org">
-									Can't register? Contact us for help.
-								</a>
-								{% endif %}
-								</center>
-							</div>
-						</div>
-					{# {% endif %} #}
-					<input type="hidden" name="next" value="{{ next }}" />
-				</form>
-	        </div>
 		</div>
 	</div>
 {% endblock %}
@@ -138,7 +127,7 @@
 		$(this).attr("required", "");
 		$(this).after("<small class='error'>Please fill valid "+this.name+"</small>");
 	});
-
+    
 	//Code to refresh the Captcha
     $('.js-captcha-refresh').click(function(){
     $form = $(this).parents('form');
