--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -15925,8 +15925,7 @@ th.hide-for-touch {
     #top-headers #first-header.top-bar .top-bar-section ul.dropdown {
       background: #fff !important; }
       #top-headers #first-header.top-bar .top-bar-section ul.dropdown li input[type=submit] {
-        height: 3em;
-        width: 8em; }
+        height: 3em; }
     @media only screen and (max-width: 40em) {
       #top-headers #first-header.top-bar .top-bar-section #login-button-medium {
         display: none; }
