--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -110,7 +110,7 @@
 
     .top-bar-section li a:not(.button), .top-bar-section li {
         // background-color: scale-color($topbar-bg-color, $lightness: 10%);
-        background-color: inherit !important;
+        background-color: #fff !important;
         color: #333 !important;
         font-weight: 600;
 
