create note and create collection

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/thread_details.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/thread_details.html
@@ -153,6 +153,7 @@ color: #7a7a7a;
  -->
  			{% endcomment %}
 
+            {{thread.pk}}        {% get_thread_node thread.pk as thread_node %}
 
 			<div id="smalldiv" >
 
