--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -1,4 +1,6 @@
-{% load get_course_filters from ndf_tags %}
+{% load get_course_filters get_group_name from ndf_tags %}
+{% get_group_name groupid as group_name_tag %}
+
 {% load simple_filters %}
 <div class="gallery-page">
     <div class="row gallery-header">
@@ -79,7 +81,7 @@
         <div class="medium-12 columns gallery-content" >
             <div class="gallery-subheader small-12">
                 <div class="row">
-                {% if request.user.is_authenticated %}
+`                {% if request.user.is_authenticated %}
                   {% if allow_to_upload %}
                     <div class="upload-file small-12 medium-3 large-2 columns" id="upload_form_div">
                         <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'upload_using_save_file' group_id %}">
@@ -100,10 +102,9 @@
                   {% endif %}
                   {% endif %}
                 
-                   {% comment %}
                     <div class="small-12 medium-10 columns gallery-actions" >
                         <div class="create-note">
-                         <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" style="margin: 0em 0em 1em;">
+                         <a   style="margin: 0em 0em 1em;">
                             <i class="fi-page-edit"></i>
                             <span> Create note</span>
                         </a>
@@ -129,7 +130,6 @@
                     </div>
                     
             </div>
-                   {% endcomment %}
             <!-- Files listing div -->
             <div class="gallery-body small-12 columns">
                 <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-5 gallery-body-ul">
@@ -279,11 +279,31 @@
   $(".create-note").click(function(){
 
     $('.filenode:checked').each(function() {
-        alert($(this).closest("div").attr("class"));
-         var url = $(this).closest('.scard-container').find('img').attr('src');
-         alert(url); 
-         CKEDITOR.instances['ckeditor_textarea'].insertHtml('<div>shree ganesha</div>');
+
+        // alert("{% url 'page_create_edit' group_name_tag %}?course_event_id={{group_id}}&blog_type=True");
+        // alert("{{group_id}}");
+         var image_coll = $(this).closest('.scard-container').find('img').attr('src');
+         alert(image_coll);
+         // alert(url); 
+            // uri= "{% url 'page_create_edit' group_name_tag %}?course_event_id={{group_id}}&blog_type=True&my="+url;
+      
       });
+          $.ajax({
+            type: "GET",
+            url: "{% url 'course_create_note' group_id %}",
+            datatype: "html",
+
+            data:{
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                // image_coll = image_coll              
+            },
+            success: function(data) {
+                $("#create_collection_model").html(data);
+                
+                $("#create_collection_model").foundation('reveal', 'open');
+            }
+          });          
+        
 
   })
 
