--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -1519,13 +1519,12 @@
 		{% endif %}
 	    updateAllTags();
 
+    	var tagsStr = tags.value.trim();
 	    if(checkTag())
 	    {
-	    	var tagsStr = tags.value.trim();
-
 	    	$("input:hidden[name='tags']").val($("input:hidden[name='tags']").val() + ', ' + tagsStr);
 	    }
-	    else
+	    else if(tagsStr)
 	    {
 	    	event.preventDefault();
 	    }
