--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -1312,20 +1312,26 @@
 		var textValue = tags.value.trim();
 		// console.log(textValue.length);
 
-		if(textValue.length < 1){ return false; }
+		// if(textValue.length < 1){ return false; }
+		if(textValue.length > 0){ 
 
-		// re expression containing special characters
-		var re = /[.*+=~`<>;:'"_?^${}()!%\^|[\]\\\/#]/g;
+			// re expression containing special characters
+			var re = /[.*+=~`<>;:'"_?^${}()!%\^|[\]\\\/#]/g;
 
-		if(re.test(textValue))
-		{	// having special characters
-			$('#tags_error').removeClass("hide");
-			return false;
+			if(re.test(textValue))
+			{	// having special characters
+				$('#tags_error').removeClass("hide");
+				return false;
+			}
+			else
+			{	// passed the test and now add tag label
+				$('#tags_error').addClass("hide") // fadeout fastly ongoing fadeout event
+				return true;
+			}
 		}
-		else
-		{	// passed the test and now add tag label
-			$('#tags_error').addClass("hide") // fadeout fastly ongoing fadeout event
+		else{
 			return true;
+			//no tags added
 		}
 	}
 
